<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_inicio"
        android:enabled="true"
        android:icon="@drawable/ic_home_white"
        android:title="@string/bottom_menu_inicio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_buscar"
        android:enabled="true"
        android:icon="@drawable/ic_action_eye_open_white"
        android:title="@string/bottom_menu_buscar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_consejos"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_white"
        android:title="@string/bottom_menu_consejos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_esteriliza"
        android:enabled="true"
        android:icon="@drawable/ic_local_hospital_white"
        android:title="@string/bottom_menu_est"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_search_white"
        android:title="@string/bottom_menu_mas_info"
        app:showAsAction="ifRoom" />
</menu>