<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buscar_background"
    tools:context="com.zecovery.android.ptrac.fragment.FragmentBuscar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/yellow_300"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:background="@color/darkBackground"
                android:layout_margin="8dp"
                android:gravity="center"
                android:id="@+id/linearLayoutRut"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:background="@color/red_400"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iconRut"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textViewTitleRut"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:textSize="28sp"
                        android:text="@string/busqueda_rut_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:layout_margin="8dp"
                    android:id="@+id/textViewSubRut"
                    android:text="@string/busqueda_rut_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_margin="8dp"
                    android:id="@+id/editTextBusquedaRut"
                    android:hint="@string/busqueda_rut_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_margin="8dp"
                    android:id="@+id/buttonBuscarRut"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/button_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:visibility="gone"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/linearLayoutChip"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iconChip"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:textSize="28sp"
                        android:id="@+id/textViewTitleChip"
                        android:text="@string/busqueda_chip_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:layout_margin="8dp"
                    android:id="@+id/textViewSubChip"
                    android:text="@string/busqueda_chip_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_margin="8dp"
                    android:id="@+id/editTextBusquedaChip"
                    android:hint="@string/busqueda_chip_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_margin="8dp"
                    android:id="@+id/buttonBuscarChip"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/button_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
