<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zecovery.android.ptrac.fragment.FragmentConsejos">

    <LinearLayout
        android:background="@drawable/fondo_borroso"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginBottom="16dp"
            android:src="@drawable/logo_banda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/mrlove"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_identificacion_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_identificacion" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_ejercicio_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_ejercicio" />

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/madame"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/bairon"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_lugar_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_lugar" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_educacion_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_educacion" />

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/guaguito"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/senora"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_comunidad_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_comunidad" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_socializacion_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_socializacion" />

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/wood"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/popo"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_no_abandonar_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_no_abandonar" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:text="@string/consejos_adopcion_title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/consejos_adopcion" />

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/mrlove"
                        app:civ_border_color="@color/darkBackground"
                        app:civ_border_width="1dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
